k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
      - name: test-service
        image: ghcr.io/raghiba/test-service:latest
        ports:
        - containerPort: 8080
