k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: test-http-server
spec:
  selector:
    app: test-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
