k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-server-ingress
  namespace: test-http-server
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"  # Adjust if you're using cert-manager
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: test-server.raghiba.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service.test-http-server.svc.cluster.local
            port:
              number: 80
  tls:
  - hosts:
    - test-server.raghiba.com
    secretName: test-server-tls
